fixed padding spacing page News.

--- a/src/components/news/index.sass
+++ b/src/components/news/index.sass
@@ -4,7 +4,7 @@
 	padding-bottom: 0
 	h2
 		font-size: 35px
-		color: rgb(51, 51, 531)
+		color: rgb(51, 51, 51)
 		text-transform: uppercase
 		line-height: 1.571
 		font-family: 'Raleway', sans-serif
